--- a/ClientApp/src/app/formula-lookup/tradename-select/tradename-select.component.html
+++ b/ClientApp/src/app/formula-lookup/tradename-select/tradename-select.component.html
@@ -33,14 +33,14 @@
         <table class="table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="100%">
           <thead>
             <tr>
-              <th scope="col">TradeName</th>
-              <th scope="col">INCIName</th>
-              <th scope="col" style="width:15%">Item #</th>
+              <th class="header" scope="col">TradeName</th>
+              <th class="header" scope="col">INCIName</th>
+              <th class="header" scope="col" style="width:15%">Item #</th>
 
-              <th scope="col">P #</th>
-              <th scope="col">Supplier</th>
-              <th scope="col">Unitcost</th>
-              <th scope="col">Unit</th>
+              <th class="header" scope="col">P #</th>
+              <th class="header" scope="col">Supplier</th>
+              <th class="header" scope="col">Unitcost</th>
+              <th class="header" scope="col">Unit</th>
             </tr>
           </thead>
           <tbody>
