--- a/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.html
+++ b/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.html
@@ -273,6 +273,7 @@
                     <table class=" table table-hover table-bordered" style="margin-left: 10px; " id="table" width="98%">
                       <thead>
                         <tr>
+                          <th hidden scope="col">Itemcode </th>
                           <th scope="col">Item # </th>
                           <th scope="col">INCI Name</th>
                           <th scope="col">Trade Name</th>
@@ -283,8 +284,9 @@
                         </tr>
                       </thead>
                       <tbody>
-                        <tr *ngFor="let Rmsupplier_rmapproved of dataloadsupplierapprovedrm; let i=index;"(dblclick)=" rowDoubleClicked(Rmsupplier_rmapproved)">
-                          <td>{{ Rmsupplier_rmapproved.ItemCode}}</td>
+                        <tr *ngFor="let Rmsupplier_rmapproved of dataloadsupplierapprovedrm; let i=index;" (dblclick)=" rowDoubleClicked(Rmsupplier_rmapproved)">
+                          <td hidden>{{ Rmsupplier_rmapproved.ItemCode}}</td>
+                          <td class="tabledatasize">{{ Rmsupplier_rmapproved.GeneralItemCode}}</td>
                           <td class="tabledatasize" style="width:17%">{{ Rmsupplier_rmapproved.Description}}</td>
                           <td class="tabledatasize" style="width:17%">{{ Rmsupplier_rmapproved.IngredientTradeName}}</td>
                           <td class="tabledatasize">{{ Rmsupplier_rmapproved.INNName}}</td>
@@ -305,6 +307,7 @@
                     <table class=" table table-hover table-bordered" style="margin-left: 10px; " id="table" width="98%">
                       <thead>
                         <tr>
+                          <th hidden scope="col">Itemcode </th>
                           <th scope="col">Item # </th>
                           <th scope="col">INCI Name</th>
                           <th scope="col">Trade Name</th>
@@ -315,8 +318,9 @@
                         </tr>
                       </thead>
                       <tbody>
-                        <tr *ngFor="let Rmsupplier_rmall of dataloadsupplierunapprovedrm; let i=index;"(dblclick)=" rowDoubleClicked(Rmsupplier_rmall)">
-                          <td>{{ Rmsupplier_rmall.ItemCode}}</td>
+                        <tr *ngFor="let Rmsupplier_rmall of dataloadsupplierunapprovedrm; let i=index;" (dblclick)=" rowDoubleClicked(Rmsupplier_rmall)">
+                          <td hidden>{{ Rmsupplier_rmall.ItemCode}}</td>
+                          <td class="tabledatasize">{{ Rmsupplier_rmall.GeneralItemCode}}</td>
                           <td class="tabledatasize" style="width:17%">{{ Rmsupplier_rmall.Description}}</td>
                           <td class="tabledatasize" style="width:17%">{{ Rmsupplier_rmall.IngredientTradeName}}</td>
                           <td class="tabledatasize">{{ Rmsupplier_rmall.INNName}}</td>
