--- a/ClientApp/src/app/productization/productization.component.html
+++ b/ClientApp/src/app/productization/productization.component.html
@@ -243,7 +243,7 @@
                             <button type="submit" class="btn btn-primary buttoncolor" style="margin-left:10px;height:50px;" >BOM Report</button>
                             <button type="submit" class="btn btn-primary buttoncolor" style="margin-left:10px;height:50px;" >Import COMP</button>
                             <button type="submit" class="btn btn-primary buttoncolor" style="margin-left:10px;height:50px;" (click)="deletepackaging();">Delete Packaging</button>
-                            <button type="submit" class="btn btn-primary buttoncolor" style="margin-left:10px;height:50px;" >COMP Listing </button>
+                            <button type="submit" class="btn btn-primary buttoncolor" style="margin-left:10px;height:50px;"(click)="complisting();" >COMP Listing </button>
                             <button type="submit" class="btn btn-primary buttoncolor" style="margin-left:10px;height:50px;" (click)="componentadd();">Add Component</button>
    
                           </div>
