--- a/ClientApp/src/app/formula-lookup/itemname-select/itemname-select.component.html
+++ b/ClientApp/src/app/formula-lookup/itemname-select/itemname-select.component.html
@@ -1,4 +1,4 @@
-<div style="background-color: #f6f5f1" cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>
+<div style="background-color: #f6f5f1">
   <div style="overflow-y:auto;overflow-x:hidden; height:30vh;width:100%">
     <div class="col-sm-12">
 
