--- a/ClientApp/src/app/formula-lookup/formula-lookup.component.html
+++ b/ClientApp/src/app/formula-lookup/formula-lookup.component.html
@@ -3831,7 +3831,7 @@ Just as moisture plays a major role in package compatibility, exposure to light 
   </div>
     <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
      
-      <button mat-raised-button type="submit" class="btn btn-primary buttoncolor " style="float:right;margin-right:60px;margin-top:.5%" matDialogClose (click)="ClearData();changeTab();">Back</button>
+      <button mat-raised-button type="submit" class="btn btn-primary buttoncolor " style="float:right;margin-right:60px;margin-top:.5%"  (click)="backclick();">Back</button>
           <button mat-raised-button type="submit" class="btn btn-primary buttoncolor " style="float:right;margin-right:10px;margin-top:.5%">Save As</button>
           <button mat-raised-button type="submit" class="btn btn-primary buttoncolor " style="float:right;margin-right:10px;margin-top:.5%">Print Preview</button>
           <button mat-raised-button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;margin-top:.5%" (click)="ClearData();changeTab();">New</button>
