--- a/ClientApp/src/app/productization/add-component/add-component.component.html
+++ b/ClientApp/src/app/productization/add-component/add-component.component.html
@@ -511,7 +511,7 @@
       <button type="submit" class="btn btn-primary buttoncolor " style="float: right; margin-right: 15px; margin-top: .5%; width: 145px;" (click)="savecomponent();">Save</button>
       <button type="submit" class="btn btn-primary  buttoncolor" style="float: right; margin-right: 15px; margin-top: .5%; width: 145px;" (click)="Updatecomponent();">Update</button>
       <button type="submit" class="btn btn-primary  buttoncolor" style="float: right; margin-right: 15px; margin-top: .5%; width: 145px;"(click)="clear();">New</button>
-      <button type="submit" class="btn btn-primary buttoncolor" style="float: right; margin-right: 15px; margin-top: .5%; width: 180px;">Delete Component</button>
+      <button type="submit" class="btn btn-primary buttoncolor" style="float: right; margin-right: 15px; margin-top: .5%; width: 180px;" (click)="deletecomp();">Delete Component</button>
       <button type="submit" class="btn btn-primary buttoncolor" style="float: right; margin-right: 15px; margin-top: .5%; width: 180px;">Report</button>
      
 
