--- a/ClientApp/src/app/formula-lookup/add-qc/add-qc.component.html
+++ b/ClientApp/src/app/formula-lookup/add-qc/add-qc.component.html
@@ -29,7 +29,7 @@
         <label class="label1" for="inputcust" style=" padding-top: 10px;">Test Name</label>
         <select id="PRD" class="form-control" style="width:60%" [(ngModel)]="TESTNAME" name="TEst" value=""
                 (change)="loadunits($event);">
-          <option selected>N\A</option>
+          <option selected>N/A</option>
           <option *ngFor="let qctests_Details of loadqctests">{{ qctests_Details.Description}}</option>
 
           <!--<option hidden *ngFor="let qctests_Details of loadqctests">{{ qctests_Details.TestCode}}</option>-->
@@ -40,11 +40,11 @@
       </div>
     </div>
     <div class="form-inline" style="margin-top:10px">
-      <label class="label1" for="PDR">Unit</label>
+      <label class="label1" for="testi">Unit</label>
 
-      <select id="PRD" class="form-control" style="width:60%" type="text" [(ngModel)]="testunit" name="unit" value="">
-
-        <option selected *ngFor="let qcunits_Details of loadqcunits">{{ qcunits_Details.QCTestUnit}}</option>
+      <select id="testi" class="form-control" style="width:60%" type="text" [(ngModel)]="testunit" name="unit" value="">
+        
+        <option *ngFor="let qcunits_Details of loadqcunits">{{ qcunits_Details.QCTestUnit}}</option>
       </select>
     </div>
     <div class="form-inline" style="margin-top:10px">
