--- a/ClientApp/src/app/formula-lookup/customer-details/customer-details.component.html
+++ b/ClientApp/src/app/formula-lookup/customer-details/customer-details.component.html
@@ -1067,7 +1067,7 @@
                   <button type="submit" class="btn btn-primary buttoncolor " style="margin-top:1%;margin-left:1%;height:40px;width:200px;"(click)="deletetierrange()">Delete Tier Range</button>
                   <div class="table-wrapper-scroll-y my-custom-scrollbar" style="margin-left:1%;margin-top:1%; ">
 
-                    <dx-data-grid id="gridContainer " style="width: 100%; height: 12rem;font-family:Verdana;font-style:normal;background-color:white"
+                    <!--<dx-data-grid id="gridContainer " style="width: 100%; height: 12rem;font-family:Verdana;font-style:normal;background-color:white"
                                  
                                   (onSelectionChanged)="selectedRowIndexListinggridData($event)"
                                   [columnAutoWidth]="true"
@@ -1084,64 +1084,93 @@
                                    [allowUpdating]="true"
                                    [useIcons]="true">
                       </dxo-editing>-->
-                      <dxo-column-chooser [enabled]="false">
-                        <!-- or "select" -->
-                      </dxo-column-chooser>
-                      <dxo-selection mode="single"></dxo-selection>
-                      <dxo-scrolling mode="virtual"></dxo-scrolling>
+                    <!--<dxo-column-chooser [enabled]="false">-->
+                     
+                      <!-- or "select" -->
+                      <!--</dxo-column-chooser>
+    <dxo-selection mode="single"></dxo-selection>
+    <dxo-scrolling mode="virtual"></dxo-scrolling>
 
-                      <dxo-column-chooser [enabled]="false"></dxo-column-chooser>
-                      <dxo-column-fixing [enabled]="true"></dxo-column-fixing>
+    <dxo-column-chooser [enabled]="false"></dxo-column-chooser>
+    <dxo-column-fixing [enabled]="true"></dxo-column-fixing>
 
-                      <dxi-column dataField=""></dxi-column>
-                      <dxi-column dataField=""></dxi-column>
-                      <dxi-column type="buttons" [width]="110">
+    <dxi-column dataField=""></dxi-column>
+    <dxi-column dataField=""></dxi-column>
+    <dxi-column type="buttons" [width]="110">
 
-                      </dxi-column>
-                      <dxi-column [width]="200"  dataField="ProductNumber" headerCellTemplate="addressHeaderTemplate2Product"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplate2Product'">
-                        <b style="color: black">Product #</b>
-                      </div>
-                      <dxi-column dataField="ProductName" headerCellTemplate="addressHeaderTemplate2productname"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplate2productname'">
-                        <b style="color: black">Product Name</b>
-                      </div>
-                      <dxi-column [width]="85" dataField="UnitSize" headerCellTemplate="addressHeaderTemplate2unitsize" dataType="number"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplate2unitsize'">
-                        <b style="color: black">Unit Size</b>
-                      </div>
-                      <dxi-column [width]="85" dataField="Unit" headerCellTemplate="addressHeaderTemplate2unit">
-                        <dxo-lookup [dataSource]="erpunitload_data"
-                                    valueExpr="UnitName"
-                                    displayExpr="UnitName">
-                        </dxo-lookup>
-                      </dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplate2unit'">
-                        <b style="color: black">Unit</b>
-                      </div>
-                
-                      <dxi-column [width]="200" dataField="Tier1Value" headerCellTemplate="addressHeaderTemplate2tier1"  dataType="number"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplate2tier1'">
-                        <b style="color: black"> {{this.selectedtier1}} </b>
-                      </div>
-                      <dxi-column [width]="200" dataField="Tier2Value" headerCellTemplate="addressHeaderTemplate2tier2"  dataType="number"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplate2tier2'">
-                        <b style="color: black;"> {{this.selectedtier2}} </b>
-                      </div>
-                      <dxi-column [width]="200" dataField="Tier3Value" headerCellTemplate="addressHeaderTemplate2tier3"  dataType="number"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplate2tier3'">
-                        <b style="color: black"> {{this.selectedtier3}} </b>
-                      </div>
-                      <dxi-column [width]="200" dataField="Tier4Value" headerCellTemplate="addressHeaderTemplate2tier4"  dataType="number"></dxi-column>
-                      <div *dxTemplate="let info of 'addressHeaderTemplate2tier4'">
-                        <b style="color: black">  {{this.selectedtier4}} </b>
-                      </div>
+    </dxi-column>
+    <dxi-column [width]="200"  dataField="ProductNumber" headerCellTemplate="addressHeaderTemplate2Product"></dxi-column>
+    <div *dxTemplate="let info of 'addressHeaderTemplate2Product'">
+      <b style="color: black">Product #</b>
+    </div>
+    <dxi-column dataField="ProductName" headerCellTemplate="addressHeaderTemplate2productname"></dxi-column>
+    <div *dxTemplate="let info of 'addressHeaderTemplate2productname'">
+      <b style="color: black">Product Name</b>
+    </div>
+    <dxi-column [width]="85" dataField="UnitSize" headerCellTemplate="addressHeaderTemplate2unitsize" dataType="number"></dxi-column>
+    <div *dxTemplate="let info of 'addressHeaderTemplate2unitsize'">
+      <b style="color: black">Unit Size</b>
+    </div>
+    <dxi-column [width]="85" dataField="Unit" headerCellTemplate="addressHeaderTemplate2unit">
+      <dxo-lookup [dataSource]="erpunitload_data"
+                  valueExpr="UnitName"
+                  displayExpr="UnitName">
+      </dxo-lookup>
+    </dxi-column>
+    <div *dxTemplate="let info of 'addressHeaderTemplate2unit'">
+      <b style="color: black">Unit</b>
+    </div>
+
+    <dxi-column [width]="200" dataField="Tier1Value" headerCellTemplate="addressHeaderTemplate2tier1"  dataType="number"></dxi-column>
+    <div *dxTemplate="let info of 'addressHeaderTemplate2tier1'">
+      <b style="color: black"> {{this.selectedtier1}} </b>
+    </div>
+    <dxi-column [width]="200" dataField="Tier2Value" headerCellTemplate="addressHeaderTemplate2tier2"  dataType="number"></dxi-column>
+    <div *dxTemplate="let info of 'addressHeaderTemplate2tier2'">
+      <b style="color: black;"> {{this.selectedtier2}} </b>
+    </div>
+    <dxi-column [width]="200" dataField="Tier3Value" headerCellTemplate="addressHeaderTemplate2tier3"  dataType="number"></dxi-column>
+    <div *dxTemplate="let info of 'addressHeaderTemplate2tier3'">
+      <b style="color: black"> {{this.selectedtier3}} </b>
+    </div>
+    <dxi-column [width]="200" dataField="Tier4Value" headerCellTemplate="addressHeaderTemplate2tier4"  dataType="number"></dxi-column>
+    <div *dxTemplate="let info of 'addressHeaderTemplate2tier4'">
+      <b style="color: black">  {{this.selectedtier4}} </b>
+    </div>
 
 
-                    </dx-data-grid>
-                  </div>
-                 
-                </ng-template>
+  </dx-data-grid>-->
+                      <ag-grid-angular style="width: 100%; height: 12rem;font-family:Verdana;font-style:normal;background-color:white"
+                                       class="ag-theme-alpine"
+                                       [rowHeight]="rowHeight"
+                                       [columnDefs]="columnDefs1"
+                                       [rowClassRules]="rowClassRules"
+                                       (columnResized)="onColumnResized($event)"
+                                       (columnVisible)="onColumnVisible($event)"
+                                       #agGrid
+                                       [applyColumnDefOrder]="true"
+                                       [getRowStyle]="getRowStyle"
+                                       [rowStyle]="rowStyle"
+                                       [getRowNodeId]="getRowNodeId"
+                                       [rowSelection]="rowSelection"
+                                       [enableRangeSelection]="true"
+                                       (rowDoubleClicked) = "Opentiredvolumepricing($event)"
+                                       [suppressScrollOnNewData]="true"
+                                       [gridOptions]="gridOptions"
+                                       [defaultColDef]="defaultColDef"
+                                       [rowData]="pricedetailgrid_data"
+                                       [overlayLoadingTemplate]="overlayLoadingTemplate"
+                                       (gridReady)="onGridReadyone($event)">
+
+                      </ag-grid-angular>
+</div>
+                  <div class="form-row">
+                    <div class="col">
+                      <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px; height: 50px; width: 190px;margin-top:10px;" (click)="addRow1();">Insert Row</button>
+                      <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 20px; height: 50px; width: 190px;margin-top:10px;" (click)="deleteRow1();">Delete Row</button>
+                    </div>
+                    </div>
+</ng-template>
               </ngb-tab>
               <ngb-tab title="Tiered Volume Pricing Listing">
                 <ng-template ngbTabContent>
