--- a/ClientApp/src/app/raw-material/safty-phrases/safty-phrases.component.html
+++ b/ClientApp/src/app/raw-material/safty-phrases/safty-phrases.component.html
@@ -7,7 +7,7 @@
       <label for="data_requirements" style="margin-top: 3%;">Safety Phrases</label>
 
       <div class="card" style="margin-left: 10px;">
-        <div class="card-body" style="width: 90%;height:700px;overflow-y:auto">
+        <div class="card-body" style="width: 90%;height:1000px;">
           <ul>
             <li *ngFor="let item of list">
               <input type="checkbox" [(ngModel)]="item.checked" > {{item.title}}
