--- a/ClientApp/src/app/raw-material/search-inci-name/search-inci-name.component.html
+++ b/ClientApp/src/app/raw-material/search-inci-name/search-inci-name.component.html
@@ -66,11 +66,11 @@ Please provide a valid zip.
           </div>
           <div class="form-inline" style="padding-top:5px">
             <label for="PDR #">Inci Name</label>
-            <input style="width:60%;" type="text" class="form-control" [(ngModel)]="inci" name="inciname" value="" id="Project Name">
+            <input style="width:60%;" type="text" class="form-control" [(ngModel)]="inci" name="inciname" value="" id="Project Name" (blur)="quicksaveevent($event)">
           </div>
           <div class="form-inline"  style="padding-top:5px">
             <label for="PDR #">Function</label>
-            <select id="PRD" class="form-control" style="width:60%;  margin-left:4px" [(ngModel)]="fun_name"  name="funct" value="" >
+            <select id="PRD" class="form-control" style="width:60%;  margin-left:4px" [(ngModel)]="fun_name"  name="funct" value="" [disabled]="isquickftn">
               <option selected>Choose...</option>
               <option *ngFor="let funcval of dataloadfuncsearch">{{funcval.function}}</option>
 
@@ -110,7 +110,7 @@ Please provide a valid zip.
 
           <div class="form-inline">
             <label for="PDR #">CAS No</label>
-            <input  disabled style="width:60%;" type="text" class="form-control" [(ngModel)]="casnum"  name="casnumval" value="">
+            <input  style="width:60%;" type="text" class="form-control" [(ngModel)]="casnum"  name="casnumval" value="" [disabled]="isquickcas" >
 
 
 
