--- a/ClientApp/src/app/productization/productization.component.html
+++ b/ClientApp/src/app/productization/productization.component.html
@@ -148,7 +148,7 @@
                           <label for="prpack" style="margin-left:5px;font-size: medium;font-family: Verdana;">Product Pack #</label>
                           <input type="text" style="margin-left: 20px;color:darkred;" class="form-control" placeholder="" id="PDR" size="40"  disabled [(ngModel)]="productpack" name="prdctpack" value="">
                           <label for="cus" style="margin-left: 4%;font-size: medium;font-family: Verdana;">BOM Customer</label>
-                          <input type="text" style="margin-left:30px;width:20%" class="form-control" id="bom" [(ngModel)]="bomcustomer"  name="bomcus" value="">
+                          <input type="text" disabled style="margin-left:30px;width:20%" class="form-control" id="bom" [(ngModel)]="bomcustomer"  name="bomcus" value="">
 
                         </form>
                         <label style="margin-left:1%;margin-top:10px;color:green;">Type in grid to search for component to add it.</label>
