--- a/ClientApp/src/app/raw-material/raw-material.component.html
+++ b/ClientApp/src/app/raw-material/raw-material.component.html
@@ -467,7 +467,7 @@
                     <div class="col form-inline">
                       <button type="submit" class="btn btn-primary buttoncolor" style="margin-left:90px;height:50px;width:90px;" (click)="Blendsaveupdate(prcntg.value)">Save</button>
                       <button type="submit" class="btn btn-primary buttoncolor" style="margin-left:14px;height:50px;width:90px;" (click)="Clearblend()">Clear</button>
-                      <button type="submit" class="btn btn-primary buttoncolor" style="margin-left:14px;height:50px;width:180px;" (click)="Blenddelete();Clearblend()">Delete Ingredient</button>
+                      <button type="submit" class="btn btn-primary buttoncolor" style="margin-left:14px;height:50px;width:180px;" (click)="Blenddelete();">Delete Ingredient</button>
                     </div>
                   </div>
                 </form>
