--- a/ClientApp/src/app/raw-material/raw-material.component.html
+++ b/ClientApp/src/app/raw-material/raw-material.component.html
@@ -403,7 +403,7 @@
             <label for="inputcust">Lb/Gal</label>
             <input style="width: 10%;" type="text" class="form-control" [(ngModel)]="lb_gal " name="lbgal" value="" (blur)="  blurEvent2($event);">
             <label for="inputcust">Kg/m3</label>
-            <input style="width: 10%;" type="text" class="form-control" [(ngModel)]="kgm3" name="kgm" value="">
+            <input disabled style="width: 10%;" type="text" class="form-control" [(ngModel)]="kgm3" name="kgm" value="">
             <label style="margin-left:3%">VOC Contributor</label>
             <mat-radio-group aria-label="Select an option">
               <!--<mat-radio-button [value]="1" (change)="radioChange($event)">VOC Contributor</mat-radio-button>-->
