--- a/ClientApp/src/app/productization/productization.component.html
+++ b/ClientApp/src/app/productization/productization.component.html
@@ -120,7 +120,7 @@
       <div class="row">
         <div class="form-group col-md-2">
           <div style="margin-left: 10%; margin-top: 5%; height: 700px; overflow-y: auto; background-color: white; text-align: center;">
-            <div style=" text-align: center; border: solid 0.1px darkgrey;background-color:">
+            <div style=" text-align: center; border: solid 0.1px darkgrey;background-color:white;">
               <label for="PDR" style="margin-left: 5px; margin-top: 20px; font-size: large; font-family: Verdana;"><b>Poduct Image</b></label><br />
               <input type="image" src="" alt="" width="200" height="200" style="margin-left: 5px;margin-top:40px;" placeholder="NO IMAGE AVIALABLE" />
             </div>
@@ -362,8 +362,8 @@
                               <thead>
                                 <tr>
                                   <th scope="col" style="text-align:center;width:20%;">Date</th>
-                                  <th scope="col" style="text-align: center;; width: 60%;">Task</th>
-                                  <th scope="col" style="text-align: center;; width: 20%;">Username</th>
+                                  <th scope="col" style="text-align: center; width: 60%;">Task</th>
+                                  <th scope="col" style="text-align: center; width: 20%;">Username</th>
 
                                 </tr>
                               </thead>
@@ -627,8 +627,8 @@
                               <thead>
                                 <tr>
                                   <th scope="col" style="text-align:center;width:20%;">Date</th>
-                                  <th scope="col" style="text-align: center;; width: 60%;">Task</th>
-                                  <th scope="col" style="text-align: center;; width: 20%;">Username</th>
+                                  <th scope="col" style="text-align: center; width: 60%;">Task</th>
+                                  <th scope="col" style="text-align: center; width: 20%;">Username</th>
 
                                 </tr>
                               </thead>
